--- a/Resources/Distances/_manifest.json
+++ b/Resources/Distances/_manifest.json
@@ -13,7 +13,7 @@
     { "name": "orașul Vatra", "file": "orasul-Vatra.json" },
     { "name": "comuna Băcioi", "file": "comuna-Bacioi.json" },
     { "name": "satul Bîc", "file": "satul-Bic.json" },
-    { "name": "satul Brăila", "file": "satul-Brăila.json" },
+    { "name": "satul Brăila", "file": "satul-Braila.json" },
     { "name": "comuna Bubuieci", "file": "comuna-Bubuieci.json" },
     { "name": "comuna Budești", "file": "comuna-Budesti.json" },
     { "name": "satul Buneți", "file": "satul-Buneti.json" },
@@ -22,7 +22,7 @@
     { "name": "comuna Ciorescu", "file": "comuna-Ciorescu.json" },
     { "name": "satul Colonița", "file": "satul-Colonita.json" },
     { "name": "satul Condrița", "file": "satul-Condrita.json" },
-    { "name": "comuna Cruzești", "file": "comuna-Cruesti.json" },
+    { "name": "comuna Cruzești", "file": "comuna-Cruzesti.json" },
     { "name": "satul Dobrogea", "file": "satul-Dobrogea.json" },
     { "name": "satul Dumbrava", "file": "satul-Dumbrava.json" },
     { "name": "satul Făurești", "file": "satul-Fauresti.json" },
@@ -35,7 +35,7 @@
     { "name": "satul Humulești", "file": "satul-Humulesti.json" },
     { "name": "satul Revaca", "file": "satul-Revaca.json" },
     { "name": "orașul Stăuceni", "file": "orasul-Stauceni.json" },
-    { "name": "satul Străisteni", "file": "satul-Străisteni.json" },
+    { "name": "satul Străisteni", "file": "satul-Straisteni.json" },
     { "name": "comuna Tohatin", "file": "comuna-Tohatin.json" },
     { "name": "comuna Trușeni", "file": "comuna-Truseni.json" },
     { "name": "satul Văduleni", "file": "satul-Vaduleni.json" },
@@ -51,28 +51,28 @@
     { "name": "Dondușeni", "file": "Dondușeni.json" },
     { "name": "Drochia", "file": "Drochia.json" },
     { "name": "Dubăsari", "file": "Dubăsari.json" },
-    { "name": "Edineț", "file": "Edineț.json" },
-    { "name": "Fălești", "file": "Fălești.json" },
-    { "name": "Florești", "file": "Florești.json" },
+    { "name": "Edineț", "file": "Edinet.json" },
+    { "name": "Fălești", "file": "Falesti.json" },
+    { "name": "Florești", "file": "Floresti.json" },
     { "name": "Glodeni", "file": "Glodeni.json" },
-    { "name": "Hîncești", "file": "Hîncești.json" },
+    { "name": "Hîncești", "file": "Hincești.json" },
     { "name": "Ialoveni", "file": "Ialoveni.json" },
     { "name": "Leova", "file": "Leova.json" },
     { "name": "Nisporeni", "file": "Nisporeni.json" },
-    { "name": "Ocnița", "file": "Ocnița.json" },
+    { "name": "Ocnița", "file": "Ocnita.json" },
     { "name": "Orhei", "file": "Orhei.json" },
     { "name": "Rezina", "file": "Rezina.json" },
-    { "name": "Rîșcani", "file": "Rîșcani.json" },
-    { "name": "Sîngerei", "file": "Sîngerei.json" },
+    { "name": "Rîșcani", "file": "Riscani.json" },
+    { "name": "Sîngerei", "file": "Singerei.json" },
     { "name": "Soroca", "file": "Soroca.json" },
-    { "name": "Strășeni", "file": "Strășeni.json" },
-    { "name": "Șoldănești", "file": "Șoldănești.json" },
-    { "name": "Ștefan Vodă", "file": "Ștefan Vodă.json" },
+    { "name": "Strășeni", "file": "Straseni.json" },
+    { "name": "Șoldănești", "file": "Soldanesti.json" },
+    { "name": "Ștefan Vodă", "file": "Stefan-Voda.json" },
     { "name": "Taraclia", "file": "Taraclia.json" },
-    { "name": "Telenești", "file": "Telenești.json" },
+    { "name": "Telenești", "file": "Telenesti.json" },
     { "name": "Ungheni", "file": "Ungheni.json" },
-    { "name": "municipiul Bălți", "file": "municipiul-Bălți.json" },
+    { "name": "municipiul Bălți", "file": "municipiul-Balti.json" },
     { "name": "Comrat", "file": "Comrat.json" },
     { "name": "municipiul Tiraspol", "file": "municipiul-Tiraspol.json" },
-    { "name": "municipiul Bender (Tighina)", "file": "municipiul-Bender-(Tighina).json" }
+    { "name": "municipiul Bender (Tighina)", "file": "municipiul-Bender-Tighina.json" }
 ]
