--- a/Resources/Distances/_manifest.json
+++ b/Resources/Distances/_manifest.json
@@ -20,7 +20,7 @@
     { "name": "comuna Cruzești", "file": "comuna-Cruzesti.json" },
     { "name": "satul Dumbrava", "file": "satul-Dumbrava.json" },
     { "name": "satul Ghidighici", "file": "satul-Ghidighici.json" },
-    { "name": "comuna Grătiești", "file": "comuna-Gratesti.json" },
+    { "name": "comuna Grătiești", "file": "comuna-Gratiesti.json" },
     { "name": "orașul Stăuceni", "file": "orasul-Stauceni.json" },
     { "name": "comuna Tohatin", "file": "comuna-Tohatin.json" },
     { "name": "comuna Trușeni", "file": "comuna-Truseni.json" },
